--- a/package.json
+++ b/package.json
@@ -30,12 +30,10 @@
     "@types/node": "20.2.5",
     "@types/vscode": "^1.79.0",
     "@vscode/test-electron": "^2.3.2",
+    "@vscode/vsce": "^2.19.0",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@vscode/vsce": "^2.19.0"
   }
 }
