--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "main": "./extension.js",
   "contributes": {},
   "scripts": {
+    "build": "go build -o err4gen .",
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js"
