--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/node-fetch": "^2.6.4",
     "@types/vscode": "^1.79.0",
     "@vscode/test-electron": "^2.3.2",
     "@vscode/vsce": "^2.19.0",
@@ -38,5 +39,8 @@
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.11"
   }
 }
